<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="MissingPrefix"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFF8800"
    android:gravity="center_horizontal"
    android:paddingStart="@dimen/size_22dp"
    android:paddingEnd="@dimen/size_22dp"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_update_info_service"
        android:textSize="@dimen/text_size_18sp"
        fontPath="@string/font_HelveticaNeue_Medium"
        android:textColor="@android:color/white"
        android:layout_marginTop="@dimen/size_20dp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_linking_code"
        android:padding="@dimen/size_12dp"
        android:maxLines="1"
        android:layout_marginTop="@dimen/size_15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_name_company"
        android:padding="@dimen/size_12dp"
        android:maxLines="1"
        android:layout_marginTop="@dimen/size_15dp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_address"
        android:padding="@dimen/size_12dp"
        android:maxLines="1"
        android:layout_marginTop="@dimen/size_15dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/hint_note"
        android:padding="@dimen/size_12dp"
        android:gravity="start"
        android:lines="6"
        android:layout_marginTop="@dimen/size_15dp"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="@dimen/size_28dp"
        android:text="@string/title_upload_image"
        android:textSize="@dimen/text_size_16sp"
        android:textAllCaps="false"
        android:textColor="@color/color666666"/>

    <Button
        android:id="@+id/btnSaveService"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bkg_white_round"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_16sp"
        android:minHeight="0dp"
        android:minWidth="0dp"
        android:layout_marginTop="@dimen/size_70dp"
        android:paddingTop="@dimen/size_15dp"
        android:paddingBottom="@dimen/size_15dp"
        android:paddingStart="@dimen/size_40dp"
        android:paddingEnd="@dimen/size_40dp"
        android:textColor="@color/colorFF8800"
        android:text="@string/title_save"/>
</LinearLayout>