<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="@dimen/size_100dp"
        android:layout_height="@dimen/size_100dp"
        android:src="@drawable/logo_splash"
        android:layout_marginTop="@dimen/size_100dp"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/ConstraintCenterHorizontal"/>
    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_welcome"
        android:textSize="@dimen/text_size_24sp"
        android:layout_marginTop="@dimen/size_130dp"
        app:layout_constraintTop_toBottomOf="@id/ivLogo"
        style="@style/ConstraintCenterHorizontal"/>
    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_shop_name"
        app:layout_constraintTop_toBottomOf="@id/tvWelcome"
        android:textColor="@color/colorFF8800"
        android:textSize="@dimen/text_size_25sp"
        android:textStyle="bold"
        fontPath="@string/font_HelveticaNeue_Medium"
        style="@style/ConstraintCenterHorizontal"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_size_12sp"
        android:layout_marginTop="@dimen/size_4dp"
        android:textColor="@color/color606060"
        style="@style/ConstraintCenterHorizontal"
        app:layout_constraintTop_toBottomOf="@id/tvName"
        android:text="@string/msg_sologan"/>
    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_buttom_highlight"
        android:text="@string/title_button_starter"
        android:textColor="@android:color/white"
        android:textAllCaps="false"
        android:textSize="@dimen/text_size_18sp"
        android:paddingTop="@dimen/size_10dp"
        android:paddingBottom="@dimen/size_10dp"
        android:paddingStart="@dimen/size_100dp"
        android:paddingEnd="@dimen/size_100dp"
        app:layout_constraintBottom_toBottomOf="parent"
        style="@style/ConstraintCenterHorizontal"
        android:layout_marginBottom="@dimen/size_75dp"
        android:minHeight="0dp"/>
</android.support.constraint.ConstraintLayout>