<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="MissingPrefix">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/size_25dp"
        android:layout_marginEnd="@dimen/size_25dp"
        app:cardCornerRadius="@dimen/size_6dp">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/size_35dp"
            android:paddingEnd="@dimen/size_35dp"
            android:paddingTop="@dimen/size_25dp"
            android:paddingBottom="@dimen/size_65dp">
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_medium_logo"
                style="@style/ConstraintCenterHorizontal"/>
            <TextView
                android:id="@+id/tvTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_confirm_linking"
                app:layout_constraintTop_toBottomOf="@id/ivLogo"
                android:textSize="@dimen/text_size_18sp"
                android:textColor="@color/colorFF8800"
                style="@style/ConstraintCenterHorizontal"
                android:layout_marginTop="@dimen/size_24dp"
                fontPath="@string/font_HelveticaNeue_Medium"/>

            <TextView
                android:id="@+id/tvDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/des_linking_service"
                fontPath="@string/font_HelveticaNeue_Medium"
                android:layout_marginTop="@dimen/size_8dp"
                app:layout_constraintTop_toBottomOf="@id/tvTitle"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bkg_primary_round"
                android:textAllCaps="false"
                android:textSize="@dimen/text_size_16sp"
                android:minHeight="0dp"
                android:minWidth="0dp"
                style="@style/ConstraintCenterHorizontal"
                app:layout_constraintTop_toBottomOf="@id/tvDesc"
                android:layout_marginTop="@dimen/size_22dp"
                android:paddingTop="@dimen/size_15dp"
                android:paddingBottom="@dimen/size_15dp"
                android:paddingStart="@dimen/size_40dp"
                android:paddingEnd="@dimen/size_40dp"
                android:textColor="@android:color/white"
                android:text="@string/title_confirm"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</RelativeLayout>