<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_border_bottom"
    android:padding="@dimen/size_4dp"
    tools:ignore="MissingPrefix">

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/imgShopAvatar"
        android:layout_width="@dimen/size_35dp"
        android:layout_height="@dimen/size_35dp"
        android:layout_centerVertical="true"
        android:contentDescription="@null"
        android:padding="@dimen/size_5dp"
        android:src="@drawable/ic_avt_shop" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/size_8dp"
        android:layout_toStartOf="@id/right"
        android:layout_toEndOf="@id/imgShopAvatar"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtTitle"
                fontPath="@string/font_HelveticaNeue_Light"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="Tích điểm tại Siêu Thị"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/txtDescription"
                fontPath="@string/font_HelveticaNeue_Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/size_5dp"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@android:color/black"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:id="@+id/txtDateTime"
            fontPath="@string/font_HelveticaNeue_Medium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="18/12/2013 - 14:46"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/right"
        android:layout_width="@dimen/size_70dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_margin="@dimen/size_8dp"
        android:gravity="end"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtPoint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="+200"
            android:textSize="@dimen/text_size_12sp" />

        <TextView
            android:id="@+id/txtStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_4dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="Thành công"
            android:textColor="@color/color0ABB0A"
            android:textSize="@dimen/text_size_12sp" />
    </LinearLayout>
</RelativeLayout>